# VLA-Perseus

./: .gitignore  CLAUDE.md  pyproject.toml
scripts/: 0-config.py  0-prepare-big-table.ipynb  1-1-exploring-spectral-index.ipynb  1-initialize-data.py  1-spectral-index-to-big-table.ipynb  10-make-images.py  10_concat.py  10_make_images.py  10_make_images.txt  10_make_images_IQUV.py  10_make_images_concat.py  10_make_images_concat_ALLspw.py  10_make_images_concat_ALLspw_StokesQU.py  10_make_images_concat_spw.py  10_make_images_concat_spw_bigmosaic.py  10_make_images_concat_spw_epoch.py  10_make_images_directory.py  11-smooth.py  11_make_images.py  11_make_images_IQUV.py  11_make_images_concat.py  11_smooth.py  12-exportfits.py  12_exportfits.py  12_smooth.py  13_exportfits.py  13_list_images.py  14-cube.py  14_cube.py  14_list_images.py  15_RMsynthesis_table.py  15_cube.py  15_total_image.py  16-merge-table.py  16_merge_table.py  16_source_detection.py  16_total_image.py  18_merge_table.py  19-flux-extract.py  19-flux-extract1_.py  (+73 more)
scripts_24/: 0_initialize_data.py  10_make_images_concat.py  10_make_images_concat_ALLspw.py  10_make_images_concat_spw.py  10_make_images_concat_spw_combined.py  10_make_images_concat_spw_interactive.py  10_make_images_concat_spw_mosaic.py  10_make_images_spw_ms.py  11_smooth.py  12_exportfits.py  13_list_images.py  14_cube.py  1_initialize_data.py  1_make_images_ms.py  1_make_single_image.py  2_manual_flagging.py  3_calibrator_parameters.py  3_phasecenters.py  6_1_flagging_data.py  6_polcal_df.py  8_applycal_final.py  9_split.py  Jtest40.py  (+7 more)
(+8 files in other folders)
