[project]
name = "vla-perseus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.1.1",
    "carta>=1.3.3",
    "jupyter>=1.1.1",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "reproject>=0.18.0",
    "rm-tools>=1.2.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
]
